# py-contract-ui

./: LICENCE  MANIFEST.in  README.md  example_abi.json  index.html  pyproject.toml  setup.cfg
src/py_contract_ui/: generate_ui.py
src/py_contract_ui/template/: template.j2
