[metadata]
name = py-contract-ui
version = 0.0.3
author = Amjad
author_email = amjadh1996@gmail.com
description = For converting Ethereum smart contract ABIs into interactive HTML user interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AMJADH195/py-contract-ui.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    uvicorn>=0.23.2
    fastapi>=0.100.1
    Jinja2>=3.1.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    contract-ui-gen = py_contract_ui.generate_ui:main